@@ -2,6 +2,8 @@
 
 ## v5.0.3
 
+ * added (lazy) OTFSS to the solver
+ * added learning biasserting clauses
  * parameter dependencies
  * parameter dependencies can be used to reduce printed help
  * can print parameters into PCS file, according to specified dependency level
